[package]
version = "0.0.1-alpha.1"
name = "pjsip-sys"
description = "Low level bindings to pjsip."
repository = "https://github.com/evangilo/pjsip-sys"
license = "MIT"
authors = ["Evangilo Morais <evangilo@gmail.com>"]
readme = "readme.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.56.0"
pkg-config = "0.3.16"


[dependencies]
